@@ -43,6 +43,19 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
+name|atomic
+operator|.
+name|AtomicBoolean
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -391,12 +404,6 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
-name|FaultyIndexInput
-operator|.
-name|doFail
-operator|=
-literal|false
-expr_stmt|;
 block|}
 annotation|@
 name|AfterClass
@@ -735,7 +742,6 @@ expr_stmt|;
 block|}
 DECL|class|FaultyFSDirectory
 specifier|public
-specifier|static
 class|class
 name|FaultyFSDirectory
 extends|extends
@@ -744,6 +750,14 @@ block|{
 DECL|field|fsDir
 name|Directory
 name|fsDir
+decl_stmt|;
+DECL|field|doFail
+name|AtomicBoolean
+name|doFail
+init|=
+operator|new
+name|AtomicBoolean
+argument_list|()
 decl_stmt|;
 DECL|method|FaultyFSDirectory
 specifier|public
@@ -788,6 +802,8 @@ return|return
 operator|new
 name|FaultyIndexInput
 argument_list|(
+name|doFail
+argument_list|,
 name|fsDir
 operator|.
 name|openInput
@@ -927,23 +943,37 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|startFailing
+specifier|public
+name|void
+name|startFailing
+parameter_list|()
+block|{
+name|doFail
+operator|.
+name|set
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|class|FaultyIndexInput
 specifier|private
-specifier|static
 class|class
 name|FaultyIndexInput
 extends|extends
 name|BufferedIndexInput
 block|{
+DECL|field|doFail
+specifier|private
+specifier|final
+name|AtomicBoolean
+name|doFail
+decl_stmt|;
 DECL|field|delegate
 name|IndexInput
 name|delegate
-decl_stmt|;
-DECL|field|doFail
-specifier|static
-name|boolean
-name|doFail
 decl_stmt|;
 DECL|field|count
 name|int
@@ -953,6 +983,9 @@ DECL|method|FaultyIndexInput
 specifier|private
 name|FaultyIndexInput
 parameter_list|(
+name|AtomicBoolean
+name|doFail
+parameter_list|,
 name|IndexInput
 name|delegate
 parameter_list|)
@@ -976,6 +1009,12 @@ name|delegate
 operator|=
 name|delegate
 expr_stmt|;
+name|this
+operator|.
+name|doFail
+operator|=
+name|doFail
+expr_stmt|;
 block|}
 DECL|method|simOutage
 specifier|private
@@ -988,6 +1027,9 @@ block|{
 if|if
 condition|(
 name|doFail
+operator|.
+name|get
+argument_list|()
 operator|&&
 name|count
 operator|++
@@ -1107,6 +1149,8 @@ init|=
 operator|new
 name|FaultyIndexInput
 argument_list|(
+name|doFail
+argument_list|,
 name|delegate
 operator|.
 name|clone
@@ -1178,6 +1222,8 @@ return|return
 operator|new
 name|FaultyIndexInput
 argument_list|(
+name|doFail
+argument_list|,
 name|slice
 argument_list|)
 return|;
@@ -1202,7 +1248,7 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-name|Directory
+name|FaultyFSDirectory
 name|dir
 init|=
 operator|new
@@ -1285,11 +1331,10 @@ argument_list|(
 name|dir
 argument_list|)
 decl_stmt|;
-name|FaultyIndexInput
+name|dir
 operator|.
-name|doFail
-operator|=
-literal|true
+name|startFailing
+argument_list|()
 expr_stmt|;
 name|boolean
 name|exc
